--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -53,7 +53,7 @@
         <label class="sr-only">Message</label>
         <textarea class="message form-control" placeholder="Votre message"></textarea>
       </div>
-      <input class="btn btn-sub" type="submit" value="Envoyer">
+      <input class="btn btn-sub" type="submit" value="Envoyer" href="mailto:grisel.denis@sfr.fr">
     </div>
   </form>
   </div>
