--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,9 +31,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" alt="port-1" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007670/ct0ujxqvbhscdz3gznxq.jpg" alt="port-1" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264819_2229804067245235_1403297039158691512_n.jpg?oh=207fed4ed6f15ddf482b4d5853b9aa3e&oe=59731936" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007670/ct0ujxqvbhscdz3gznxq.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -46,9 +46,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264155_2229180330640942_6559201386661545325_n.jpg?oh=fc1c4af6214c6ca5470bb71e29c92a5a&oe=59608591" alt="port-2" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007447/y9djqwlwvdwygyr4vi2i.jpg" alt="port-2" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264155_2229180330640942_6559201386661545325_n.jpg?oh=fc1c4af6214c6ca5470bb71e29c92a5a&oe=59608591" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007447/y9djqwlwvdwygyr4vi2i.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -61,9 +61,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264652_2227920950766880_1310230789050484718_n.jpg?oh=620c0b87226daeaf07cbb476fd5b947a&oe=594D0DDE" alt="port-3" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007313/shnibvagubyhosxoe89r.jpg" alt="port-3" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17264652_2227920950766880_1310230789050484718_n.jpg?oh=620c0b87226daeaf07cbb476fd5b947a&oe=594D0DDE" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007313/shnibvagubyhosxoe89r.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -76,9 +76,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17201258_2226963177529324_5171502560956556780_n.jpg?oh=f9d06529d9c80c32db1ce7d96b39b871&oe=596FBB1A" alt="port-4" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492004831/qtobrtqs5xzcuev2e4pj.jpg" alt="port-4" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17201258_2226963177529324_5171502560956556780_n.jpg?oh=f9d06529d9c80c32db1ce7d96b39b871&oe=596FBB1A" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492004831/qtobrtqs5xzcuev2e4pj.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -91,9 +91,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17156196_2222256571333318_2995433018055632004_n.jpg?oh=d4d0b8a409eebccfe47568b810e0c434&oe=5950BC0F" alt="port-5" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491903906/tm3tovgc2pokpuww4q2i.jpg" alt="port-5" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/17156196_2222256571333318_2995433018055632004_n.jpg?oh=d4d0b8a409eebccfe47568b810e0c434&oe=5950BC0F" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491903906/tm3tovgc2pokpuww4q2i.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -106,9 +106,9 @@
       <div class="col-sm-4 col-xs-6 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
-            <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/16938670_2215109265381382_5121312929188564263_n.jpg?oh=cd64e75a8ce9671c62a740af5a74f54d&oe=5962FC6B" alt="port-6" class="port-item">
+            <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007251/wfhezaz2lvqy0wdm7z9l.jpg" alt="port-6" class="port-item">
             <div class="portfolio-img-hover">
-              <a href="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/16938670_2215109265381382_5121312929188564263_n.jpg?oh=cd64e75a8ce9671c62a740af5a74f54d&oe=5962FC6B" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
+              <a href="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007251/wfhezaz2lvqy0wdm7z9l.jpg" data-lightbox="gallery"><img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491817305/plus_nddo0n.png" alt="plus" class="plus"></a>
             </div>
           </div>
           <div class="portfolio-item-details">
@@ -118,6 +118,7 @@
           </div>
         </div>
       </div>
+    </div>
       <div class="button text-center">
         <a class="btn btn-denis" href="/Portfolio" role="button">En voir plus</a>
       </div>
