--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="col-sm-6 text-right">
         <div class="copy">
-          Theme by <a href="http://www.themewagon.com">themewagon.com</a>. All Rights Reserved
+          Theme by <a href="http://www.marine-petit.fr">Marine Petit</a> All Rights Reserved
         </div>
       </div>
     </div> <!-- /.row -->
