--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,34 +20,16 @@
       </div> <!-- /.col-md-3 -->
       <div class="col-md-9 col-sm-12">
         <p class="about-detail">
-          The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round. I believe I never knew what  saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it!Houston.landed.We are all connected; To each other, biologically. To the earth, chemically. To the rest of the universe atomically. The Earth was absolutely round. I believe I never knew what  saw for the first time how beautiful our planet is.
+          Autodidacte, je pratique la photographie depuis les années 1980. <br>
+
+          Mon travail aborde les paysages des bords de mer ou de la ville, parfois même les scènes de rues. Je m’intéresse en particulier à la géométrie urbaine, au graphisme, aux lignes fuyantes qui naissent de la rencontre du ciel, de la terre et de l’eau, de l’architecture et de la nature . <br>
+          <br>
+          Mais, issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes. <br>
+          <br>
+          Mes voyages et mes randonnées dans d’autres régions de France, ou beaucoup plus loin parfois, me donnent aussi l’occasion de proposer d’autres paysages, qui viennent s’inscrire en contrepoint de cette exploration systématique du Pays de Caux de mon enfance. <br>
+          <br>
         </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-4">
-        <h3 class="section-item-title">
-          we care
-        </h3>
-        <p class="section-item-detail">
-          The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <h3 class="section-item-title">
-          we deliver
-        </h3>
-        <p class="section-item-detail">
-          The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-        </p>
-      </div>
-      <div class="col-sm-4">
-        <h3 class="section-item-title">
-          we're creative
-        </h3>
-        <p class="section-item-detail">
-          The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-        </p>
+        <p class="about-detail">Denis Grisel</p>
       </div>
     </div>
   </div>
