--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,9 +15,9 @@
 <section class="note gray">
   <div class="container section-wrapper text-center">
     <p class="quote">
-      “When you’re a carpenter making a beautiful chest of drawers, you’re not going to use a piece of plywood on the back, even though it faces the wall and nobody will see it. You’ll know it’s there, so you’re going to use a beautiful piece of wood on the back. For you to sleep well at night, the aesthetic, the quality, has to be carried all the way through.”
+      “Mon travail aborde les paysages des bords de mer ou de la ville, parfois même les scènes de rues. Je m’intéresse en particulier à la géométrie urbaine, au graphisme, aux lignes fuyantes qui naissent de la rencontre du ciel, de la terre et de l’eau, de l’architecture et de la nature.”
     </p>
-    <div class="quoter">Steve Jobs</div>
+    <div class="quoter">Denis Grisel</div>
   </div>
 </section>
 
