Change text home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 <section class="note gray">
   <div class="container section-wrapper text-center">
     <p class="quote">
-      “Mon travail aborde les paysages des bords de mer ou de la ville, parfois même les scènes de rues. Je m’intéresse en particulier à la géométrie urbaine, au graphisme, aux lignes fuyantes qui naissent de la rencontre du ciel, de la terre et de l’eau, de l’architecture et de la nature.”
+      “Issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes.”
     </p>
     <div class="quoter">Denis Grisel</div>
   </div>
