--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -12,7 +12,7 @@
   color: #fff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #FFF;
+    background-color: black;
 }
 .navbar-fixed-top .navbar-toggle .icon-bar {
     background-color: #313131;
