--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,32 @@
 <section class="header" id="header">
   <div class="container">
-    <div class="header-table">
-      <div class="header-wrapper">
-        <h1 class="header-title">
-          Chemins de terre
-        </h1>
-        <p class="header-subtitle">
-        </p>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+        <div class="header-table">
+          <div class="header-wrapper">
+            <h1 class="header-title">
+              Chemins de terre
+            </h1>
+            <p class="header-subtitle">
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
+
 <section class="note gray">
   <div class="container section-wrapper text-center">
-    <p class="quote">
-      “Issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes.”
-    </p>
-    <div class="quoter">Denis Grisel</div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+        <p class="quote">
+          “Issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes.”
+        </p>
+        <div class="quoter">Denis Grisel</div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -28,7 +37,7 @@
     </h2> <!-- /.section-title -->
     <div class="underline purple"></div>
     <div class="row">
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007670/ct0ujxqvbhscdz3gznxq.jpg" alt="port-1" class="port-item">
@@ -37,13 +46,13 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+            <!-- <div class="portfolio-item-name">
               Denis Grisel<br><small>Nature</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007447/y9djqwlwvdwygyr4vi2i.jpg" alt="port-2" class="port-item">
@@ -52,13 +61,13 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+            <!-- <div class="portfolio-item-name">
               Denis Grisel <br><small>Photography</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007313/shnibvagubyhosxoe89r.jpg" alt="port-3" class="port-item">
@@ -67,13 +76,13 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+           <!--  <div class="portfolio-item-name">
               Denis Grisel <br><small>Design</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492004831/qtobrtqs5xzcuev2e4pj.jpg" alt="port-4" class="port-item">
@@ -82,13 +91,13 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+            <!-- <div class="portfolio-item-name">
               Denis Grisel <br><small>Photography</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1491903906/tm3tovgc2pokpuww4q2i.jpg" alt="port-5" class="port-item">
@@ -97,13 +106,13 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+           <!--  <div class="portfolio-item-name">
               Denis Grisel <br><small>Photography</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-xs-6 col-md-6">
+      <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
             <img src="http://res.cloudinary.com/db6cwsgoc/image/upload/v1492007251/wfhezaz2lvqy0wdm7z9l.jpg" alt="port-6" class="port-item">
@@ -112,9 +121,9 @@
             </div>
           </div>
           <div class="portfolio-item-details">
-            <div class="portfolio-item-name">
+            <!-- <div class="portfolio-item-name">
                Denis Grisel <br><small>Photography</small>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -125,3 +134,4 @@
     </div>
   </div>
 </section>
+</div>
