--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,7 +36,11 @@
         </div>
       </div>
       <% end %>
-      <%= will_paginate @products %>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12">
+          <%= will_paginate @products %>
+        </div>
+      </div>
     </div>
   </div>
 </section>
