--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -14,16 +14,14 @@
         <i class="fa fa-map-marker"></i>
         <h3>Adresse</h3>
         <p class="contact">
-            Hoffman Parkway, 353 <br>
-            Monuntain View, USA
+            Le Havre <br>
         </p>
     </div>
     <div class="col-md-4 contact-item col-sm-6 col-xs-12">
       <i class="fa fa-phone"></i>
       <h3>Téléphone</h3>
       <p class="contact">
-          Fixe: 05.00.00.00.00 <br>
-          Mobile: 06.00.00.00
+          Mobile: 07.86.43.41.12
       </p>
     </div>
     <div class="col-md-4 contact-item col-sm-6 col-xs-12">
