Change HomePage Photographie and add scroll indicator

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,11 @@
 .header {
-  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/q_100/v1492593264/3690_a4fuo8.jpg
+  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/v1492005043/e0gx8ecgqnn29m6n92hg.jpg
 '), linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-  height: 100vh;
+  height: 81vh;
   color: #fff;
   text-transform: uppercase;
 }
@@ -125,5 +125,69 @@
 
 .pagination a:hover, .pagination a:focus {
   text-decoration: underline;
+}
+
+.scroll__demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #fff;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+
+.scroll__demo a:hover {
+  opacity: .5;
+}
+
+.scroll__indicator a {
+  padding-top: 70px;
+}
+.scroll__indicator a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb05 1.5s infinite;
+  animation: sdb05 1.5s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb05 {
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
+}
+@keyframes sdb05 {
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
 }
 
