--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,11 @@
       </div>
     </div>
   </div>
+  <section class="scroll__indicator scroll__demo">
+    <a href="">
+      <span></span>
+    </a>
+  </section>
 </section>
 
 
