About image change

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,7 +16,8 @@
     <div class="underline purple"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6">
-        <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14947912_2133087476916895_4006963359571462802_n.jpg?oh=6de966a9caadc6f2aa2a70f1d759e688&oe=5959ED8D" alt="about" class="about-img">
+
+        <img src="/assets/profil-denis.jpg" alt="about" class="about-img">
       </div> <!-- /.col-md-3 -->
       <div class="col-md-9 col-sm-12">
         <p class="about-detail">
