--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,8 +16,7 @@
     <div class="underline purple"></div>
     <div class="row">
       <div class="col-md-3 col-sm-6">
-
-        <img src="/assets/profil-denis.jpg" alt="about" class="about-img">
+        <%= image_tag('profil-denis.jpg', class: "about-img") %>
       </div> <!-- /.col-md-3 -->
       <div class="col-md-9 col-sm-12">
         <p class="about-detail">
