Change homepage picture

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,5 +1,5 @@
 .section-background{
-  background: url('https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/14291796_2090091987883111_407462917773708079_n.jpg?oh=5765f83e5c9a50d277c7faadd78ef66b&oe=595D91E4');
+  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/v1498675999/asfx15jrjwx59yjemocd.jpg');
   background-size: cover;
 }
 .contact{
