--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,6 +72,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="row">
       <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
@@ -102,6 +104,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="row">
       <div class="col-sm-4 col-xs-12 col-md-6">
         <div class="portfolio-item">
           <div class="portfolio-img">
