--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -1,6 +1,7 @@
 .section-background{
-  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/v1498675999/asfx15jrjwx59yjemocd.jpg');
+  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/v1518427881/idyvwurvqf707tldwrac.jpg');
   background-size: cover;
+  background-attachment: fixed;
 }
 .contact{
     text-align: left;
