--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,5 @@
 .header {
-  background: url('http://res.cloudinary.com/db6cwsgoc/image/upload/v1492593264/3690_a4fuo8.jpg
-'), linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');
+  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://res.cloudinary.com/db6cwsgoc/image/upload/v1551732032/DSC_18-1411_jqoc2q.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
