--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,42 @@
 <section class="header" id="header">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <div class="header-table">
-          <div class="header-wrapper">
-            <h1 class="header-title">
-              Chemins de terre
-            </h1>
-            <p class="header-subtitle">
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <section class="scroll__indicator scroll__demo">
-    <a href="">
-      <span></span>
-    </a>
-  </section>
+<%=
+  # <div class="container">
+  #   <div class="row">
+  #     <div class="col-xs-12 col-sm-12">
+  #       <div class="header-table">
+  #         <div class="header-wrapper">
+  #           <h1 class="header-title">
+  #             Chemins de terre
+  #           </h1>
+  #           <p class="header-subtitle">
+  #           </p>
+  #         </div>
+  #       </div>
+  #     </div>
+  #   </div>
+  # </div>
+  # <section class="scroll__indicator scroll__demo">
+  #   <a href="">
+  #     <span></span>
+  #   </a>
+  # </section>
+  %>
 </section>
 
-
-<section class="note gray">
-  <div class="container section-wrapper text-center">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12">
-        <p class="quote">
-          “Issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes.”
-        </p>
-        <div class="quoter">Denis Grisel</div>
-      </div>
-    </div>
-  </div>
-</section>
+<%=
+# <section class="note gray">
+#   <div class="container section-wrapper text-center">
+#     <div class="row">
+#       <div class="col-xs-12 col-sm-12">
+#         <p class="quote">
+#           “Issu du monde rural, je reste le plus souvent fidèle à mes origines dans mon travail de photographe. J’arpente les chemins du Pays de Caux et je m’efforce de rendre la beauté et la poésie des paysages que je parcours en toutes saisons. Chemins de terre, clos-masures, fossés, alignements d’arbres couverts de feuilles ou dépouillés par l’hiver, clôtures, herbages, travaux des champs, bovins…, tous ces sujets se succèdent naturellement devant mon objectif. Et toujours on y retrouve ces ciels changeants de Normandie qu’ont tant aimés les Impressionnistes.”
+#         </p>
+#         <div class="quoter">Denis Grisel</div>
+#       </div>
+#     </div>
+#   </div>
+# </section>
+%>
 
 <section class="portfolio" id="portfolio">
   <div class="container section-wrapper">
