--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="form-inputs">
     <%= f.input :name, label: 'Nom' %>
     <%= f.input :description, label: 'Description' %>
-    <%= f.input :category, label: 'Categorie', collection: ["Nature", "Ville", "Agriculture"]%>
+    <%= f.input :category, label: 'Categorie', collection: ["ruralite", "mer", "rue", "voyage", "portrait", "autre" ]%>
     <%= f.input :photo, label: 'Ajouter une photo depuis votre ordinateur' %>
   </div>
 
