--- a/app/assets/stylesheets/components/_portfolio.scss
+++ b/app/assets/stylesheets/components/_portfolio.scss
@@ -32,15 +32,20 @@
 .portfolio-img:hover .port-item{
   transform: scale(1.05);
 }
+
 .portfolio-item-details{
   margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-.portfolio-item-name{
-  display: inline-block;
-  font-size: 15px;
-  margin-right: 305px;
-  color: #313131;
 
-  @media screen and (max-width: 768px){
-    margin-right: 0px;  }
+.portfolio-item-modify{
+  margin-top: 10px;
+}
+
+.portfolio-item-name{
+  font-size: 15px;
+  color: #313131;
 }
